# TurboCtl

./: .gitignore  .readthedocs.yaml  README.html  README.md  README.rst  TODO  add-to-path  global-constants  make-docs  make_docs  make_files.py  make_readme.py  makefile  ontoptest.py  pyproject.toml  real_pump.txt  turboctl-run  typetest1.py  typetest2.py
doc/sphinx/: changelog.rst  conf.py  errata.rst  index.rst  installation.rst  notes.rst  requirements.txt  reverse_sphinx_path.py  usage.rst
test_turboctl/: __init__.py  run_tests.py  test_testrunner.py
test_turboctl/data/: test_codes.py  test_parameters.py  test_parser.py  test_types.py
test_turboctl/general/: test_switcher.py
test_turboctl/run_tests/: generic_tests.py  run_tests.py  test_run_tests.py
test_turboctl/telegram/: test_api.py  test_byteholder.py  test_codes.py  test_conversions.py  test_datatypes.py  test_numtypes.py  test_parser.py  test_query.py  test_reply.py  test_telegram.py  test_telegram_wrapper.py  test_typedbytes.py
test_turboctl/ui/: test_abstractui.py  test_command_parser.py  test_correct_error_message.py  test_output.py  test_table.py  test_tui.py
test_turboctl/virtualpump/: test_hardware_component.py  test_parameter_component.py  test_virtualconnection.py  test_virtualpump.py
turboctl/: __init__.py  __main__.py  global_constants.py  hacks.py  singledispatchmethod.py
turboctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
turboctl/data/: __init__.py  checks.py  codes.py  errors.txt  parameters.txt  parser.py  types.py  warnings.txt
turboctl/general/: switcher.py  test.py  typehint_test.py
turboctl/telegram/: __init__.py  api.py  byteholder.py  check.py  codes.py  conversions.py  datatypes.py  numtypes.py  parameters.txt  parser.py  telegram.py  telegram_wrapper.py  typedbytes.py  warnings.txt  wrapper.py
turboctl/ui/: __init__.py  abstractui.py  advanced_tui.py  api.py  command_line_ui.py  command_parser.py  control_interface.py  correct_error_message.py  docs.py  output.py  print_table.py  queuefile.py  shell.py  status_format.py  table.py  tui.py  ui_errors.py  widgets.py
turboctl/virtualpump/: __init__.py  hardware_component.py  (+3 more)
(+209 files in other folders)
